2003-05-27  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* configure configure.in: Don't disable IPv& if poll is not
	  found.

2003-05-25  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* configure configure.in: Warnings enabled again. Added -cvs to
	  version.

Older entries can be found in ChangeLog-1.0.12.